Controller produtos funcionando

--- a/backend/src/html/view-product.html
+++ b/backend/src/html/view-product.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/view-style.css">
     <title>View-product</title>
 </head>
-<body>
+<!-- <body>
     <header>
         <nav>
           <h1 class="logo">MyClohtes</h1>
@@ -95,6 +95,13 @@
         <p>© Copyright 2020 Copyright.com.br - All Rights Reserved</p>
     </footer>
 
-    <script src="https://kit.fontawesome.com/2a2f0ca91f.js" crossorigin="anonymous"></script><!--https://fontawesome.com/icons-->
+
+-->
+<body>
+    <form action="">
+        <input type="text" name="genero">
+        <button type="submit">fjohohof</button>
+    </form>
 </body>
+
 </html>
